--- a/booking.html
+++ b/booking.html
@@ -12,7 +12,7 @@
         <img src="images/logo.png" alt="Logo" />
       </a>
       <ul>
-        <li><a href="/signup">Reservation</a></li>
+        <li><a href="rooms.html">Rooms</a></li>
         <li><a href="/login">Menu</a></li>
         <li><a href="/milestones">Events</a></li>
       </ul>
