--- a/booking.html
+++ b/booking.html
@@ -12,9 +12,10 @@
         <img src="images/logo.png" alt="Logo" />
       </a>
       <ul>
+        <li><a href="home.html">Home</a></li>
         <li><a href="rooms.html">Rooms</a></li>
-        <li><a href="/login">Menu</a></li>
-        <li><a href="/milestones">Events</a></li>
+        <li><a href="menu.html">Menu</a></li>
+        <li><a href="events.html">Events</a></li>
       </ul>
     </nav>
     <h1>Hotel Reservation System</h1>
