--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>Hotel Reservation System</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -12,12 +12,32 @@
         <img src="images/logo.png" alt="Logo" />
       </a>
       <ul>
-        <li><a href="/signup">Reservation</a></li>
-        <li><a href="/login">Menu</a></li>
-        <li><a href="/milestones">Events</a></li>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="rooms.html">Rooms</a></li>
+        <li><a href="menu.html">Menu</a></li>
+        <li><a href="events.html">Events</a></li>
       </ul>
     </nav>
-    
+    <h1>Hotel Reservation System</h1>
+    <div class="booking-form">
+      <h2>Book a Room</h2>
+      <form id="bookingForm">
+        <input type="text" id="guestName" placeholder="Guest Name" required />
+        <input
+          type="number"
+          id="roomNumber"
+          placeholder="Room Number"
+          required
+        />
+        <input type="date" id="checkInDate" required />
+        <input type="date" id="checkOutDate" required />
+        <button type="submit">Book Room</button>
+      </form>
+    </div>
+
+    <div class="booked-rooms">
+      <h2>Booked Rooms</h2>
+      <ul id="bookedRoomsList"></ul>
     </div>
 
     <script src="script.js"></script>
