--- a/rooms.html
+++ b/rooms.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rooms</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Available Rooms</h1>
     <div id="rooms-container"></div>
-    <script src="script.js"></script>
+    <script src="rooms.js"></script>
   </body>
 </html>
