--- a/rooms.html
+++ b/rooms.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="rooms.html">Rooms</a></li>
+        <li><a href="menu.html">Menu</a></li>
+        <li><a href="events.html">Events</a></li>
+      </ul>
+    </nav>
     <h1>Available Rooms</h1>
     <div id="rooms-container"></div>
     <script src="rooms.js"></script>
