--- a/home.html
+++ b/home.html
@@ -7,17 +7,24 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <style>
+      h1 {
+        color: black;
+        margin: 10px;
+        margin-top: 200px;
+      }
+    </style>
+
     <nav>
-      <a href="/" class="navbar-logo">
-        <img src="images/logo.png" alt="Logo" />
-      </a>
       <ul>
-        <li><a href="home.html">Rooms</a></li>
+        <li><a href="home.html">Home</a></li>
         <li><a href="rooms.html">Rooms</a></li>
         <li><a href="menu.html">Menu</a></li>
         <li><a href="events.html">Events</a></li>
       </ul>
     </nav>
-    <script src="script.js"></script>
+    <h1>Welcome to the Legacy Hotels</h1>
+    <h2>The Home of Exquisite service</h2>
+    <script src="background.js"></script>
   </body>
 </html>
